--- a/setup.cfg
+++ b/setup.cfg
@@ -2,14 +2,14 @@
 name = asphalt
 description = A microframework for network oriented applications
 long_description = file: README.rst
-author = Alex Grönholm
-author_email = alex.gronholm@nextday.fi
+author = 
+author_email = 
 project_urls =
-    Component projects = https://github.com/asphalt-framework
-    Documentation = http://asphalt.readthedocs.org/en/latest/
-    Help and support = https://github.com/asphalt-framework/asphalt/wiki/Help-and-support
-    Source code = https://github.com/asphalt-framework/asphalt
-    Issue tracker = https://github.com/asphalt-framework/asphalt/issues
+    Component projects = 
+    Documentation = 
+    Help and support = 
+    Source code = 
+    Issue tracker = 
 license = Apache License 2.0
 classifiers =
     Development Status :: 5 - Production/Stable
